feat(gui): add live module control panel and fix runtime hotspots