@@ -1,80 +1,54 @@
 package io.github.devskycore.faunareborn.command;
 
 import io.github.devskycore.faunareborn.core.FaunaRebornPlugin;
-import io.github.devskycore.faunareborn.system.shutdown.ShutdownOrchestrator;
-import io.github.devskycore.faunareborn.system.startup.StartupOrchestrator;
+import io.github.devskycore.faunareborn.gui.FaunaMainGui;
 import org.bukkit.command.CommandSender;
+import org.bukkit.entity.Player;
 import io.papermc.paper.command.brigadier.BasicCommand;
 import io.papermc.paper.command.brigadier.CommandSourceStack;
 import org.jspecify.annotations.NonNull;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.HashMap;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
-import java.util.logging.Level;
 
 public final class FaunaCommand implements BasicCommand {
 
     private static final String SUBCOMMAND_RELOAD = "reload";
+    private static final String SUBCOMMAND_GUI = "gui";
     private static final String RELOAD_PERMISSION = "faunareborn.command.reload";
+    private static final String GUI_PERMISSION = "faunareborn.command.gui";
 
-    private final FaunaRebornPlugin plugin;
+    private final FaunaReloadService reloadService;
+    private final FaunaMainGui mainGui;
 
-    public FaunaCommand(FaunaRebornPlugin plugin) {
-        this.plugin = plugin;
+    public FaunaCommand(FaunaRebornPlugin plugin, FaunaMainGui mainGui) {
+        this.reloadService = new FaunaReloadService(plugin);
+        this.mainGui = mainGui;
     }
 
     @Override
     public void execute(@NonNull CommandSourceStack source, String[] args) {
         final CommandSender sender = source.getSender();
 
-        if (args.length != 1 || !SUBCOMMAND_RELOAD.equalsIgnoreCase(args[0])) {
-            sender.sendMessage("Usage: /fauna reload");
+        if (args.length != 1) {
+            sender.sendMessage("Usage: /fauna <reload|gui>");
             return;
         }
 
-        if (!sender.hasPermission(RELOAD_PERMISSION)) {
-            sender.sendMessage("You do not have permission to use this command.");
+        String subcommand = args[0].toLowerCase(Locale.ROOT);
+        if (SUBCOMMAND_RELOAD.equals(subcommand)) {
+            executeReload(sender);
             return;
         }
 
-        long startedAt = System.nanoTime();
-        Map<Path, String> previousConfigs = readConfigSnapshots(
-                plugin.getDataFolder().toPath().resolve("config.yml"),
-                plugin.getDataFolder().toPath().resolve("entities/chicken.yml"),
-                plugin.getDataFolder().toPath().resolve("entities/cow.yml")
-        );
-
-        try {
-            new ShutdownOrchestrator(plugin).run();
-        } catch (Throwable throwable) {
-            plugin.getLogger().log(Level.SEVERE, "Failed to stop current runtime before reload.", throwable);
-            sender.sendMessage("FaunaReborn reload failed. Check console for details.");
+        if (SUBCOMMAND_GUI.equals(subcommand)) {
+            executeGui(sender);
             return;
         }
 
-        if (new StartupOrchestrator(plugin, false).run()) {
-            sender.sendMessage("FaunaReborn reloaded successfully in " + elapsedMillis(startedAt) + " ms.");
-            return;
-        }
-
-        plugin.getLogger().severe("Reload startup failed. Trying to restore previous config snapshot.");
-
-        writeConfigSnapshots(previousConfigs);
-
-        boolean restored = new StartupOrchestrator(plugin, false).run();
-        if (!restored) {
-            plugin.getLogger().severe("Failed to restore previous runtime state after reload failure.");
-        }
-
-        sender.sendMessage("FaunaReborn reload failed. Check console for details.");
+        sender.sendMessage("Usage: /fauna <reload|gui>");
     }
 
     @Override
@@ -83,49 +57,40 @@ public final class FaunaCommand implements BasicCommand {
         if (args.length != 1) {
             return Collections.emptyList();
         }
-        if (!sender.hasPermission(RELOAD_PERMISSION)) {
-            return Collections.emptyList();
-        }
         String token = args[0].toLowerCase(Locale.ROOT);
-        if (SUBCOMMAND_RELOAD.startsWith(token)) {
-            return List.of(SUBCOMMAND_RELOAD);
+        List<String> options = new java.util.ArrayList<>(2);
+        if (sender.hasPermission(RELOAD_PERMISSION) && SUBCOMMAND_RELOAD.startsWith(token)) {
+            options.add(SUBCOMMAND_RELOAD);
         }
-        return Collections.emptyList();
+        if (sender.hasPermission(GUI_PERMISSION) && SUBCOMMAND_GUI.startsWith(token)) {
+            options.add(SUBCOMMAND_GUI);
+        }
+        return options.isEmpty() ? Collections.emptyList() : List.copyOf(options);
     }
 
     @Override
     public @NonNull String permission() {
-        return RELOAD_PERMISSION;
+        return "";
     }
 
-    private Map<Path, String> readConfigSnapshots(Path... configPaths) {
-        Map<Path, String> snapshots = new HashMap<>();
-        for (Path configPath : configPaths) {
-            if (!Files.exists(configPath)) {
-                continue;
-            }
-            try {
-                snapshots.put(configPath, Files.readString(configPath, StandardCharsets.UTF_8));
-            } catch (IOException ioException) {
-                plugin.getLogger().log(Level.WARNING, "Could not read config snapshot before reload: " + configPath, ioException);
-            }
+    private void executeReload(CommandSender sender) {
+        if (!sender.hasPermission(RELOAD_PERMISSION)) {
+            sender.sendMessage("You do not have permission to use this command.");
+            return;
         }
-        return snapshots;
+        reloadService.reload(sender);
     }
 
-    private void writeConfigSnapshots(Map<Path, String> snapshots) {
-        for (Map.Entry<Path, String> entry : snapshots.entrySet()) {
-            try {
-                Files.createDirectories(entry.getKey().getParent());
-                Files.writeString(entry.getKey(), entry.getValue(), StandardCharsets.UTF_8);
-            } catch (IOException ioException) {
-                plugin.getLogger().log(Level.SEVERE, "Could not restore previous config snapshot: " + entry.getKey(), ioException);
-            }
+    private void executeGui(CommandSender sender) {
+        if (!sender.hasPermission(GUI_PERMISSION)) {
+            sender.sendMessage("You do not have permission to use this command.");
+            return;
         }
-    }
-
-    private long elapsedMillis(long startedAt) {
-        return (System.nanoTime() - startedAt) / 1_000_000L;
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage("Only players can open the FaunaReborn GUI.");
+            return;
+        }
+        mainGui.open(player);
     }
 }
 
